# Minimax-AI

./: CMakeLists.txt  README.md
AI/include/: Computer.h  MiniMaxComputer.h  RandomComputer.h
AI/src/: Computer.cpp  MiniMaxComputer.cpp  RandomComputer.cpp
data_structures/: Tree.h  Tree.hpp
executables/: minimaxScacchiera.cpp  scacchiera.cpp
include/: Board.h  Piece.h  Position.h
src/: board.cpp  piece.cpp  position.cpp
